--- a/dyfilm_client_v2.0.csproj
+++ b/dyfilm_client_v2.0.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>게시\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -50,6 +50,9 @@
   <PropertyGroup>
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -64,23 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="forms\camera.cs">
+    <Compile Include="APIClient.cs" />
+    <Compile Include="forms\first.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="forms\camera.Designer.cs">
-      <DependentUpon>camera.cs</DependentUpon>
-    </Compile>
-    <Compile Include="forms\main.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="forms\main.Designer.cs">
-      <DependentUpon>main.cs</DependentUpon>
-    </Compile>
-    <Compile Include="forms\sel_frame.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="forms\sel_frame.Designer.cs">
-      <DependentUpon>sel_frame.cs</DependentUpon>
+    <Compile Include="forms\first.Designer.cs">
+      <DependentUpon>first.cs</DependentUpon>
     </Compile>
     <Compile Include="Frame.cs">
       <SubType>Form</SubType>
@@ -91,14 +83,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\utils.cs" />
-    <EmbeddedResource Include="forms\camera.resx">
-      <DependentUpon>camera.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="forms\main.resx">
-      <DependentUpon>main.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="forms\sel_frame.resx">
-      <DependentUpon>sel_frame.cs</DependentUpon>
+    <EmbeddedResource Include="forms\first.resx">
+      <DependentUpon>first.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frame.resx">
       <DependentUpon>Frame.cs</DependentUpon>
