--- a/dyfilm_client_v2.0.csproj
+++ b/dyfilm_client_v2.0.csproj
@@ -98,7 +98,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIClient.cs" />
+    <Compile Include="src\APIClient.cs" />
+    <Compile Include="forms\camera_capture.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\camera_capture.Designer.cs">
+      <DependentUpon>camera_capture.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\first.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,9 +131,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\config.cs" />
-    <Compile Include="src\data_struct.cs" />
-    <Compile Include="src\utils.cs" />
+    <Compile Include="src\Camera.cs" />
+    <Compile Include="src\Config.cs" />
+    <Compile Include="src\DataStruct.cs" />
+    <Compile Include="src\Utils.cs" />
+    <EmbeddedResource Include="forms\camera_capture.resx">
+      <DependentUpon>camera_capture.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\first.resx">
       <DependentUpon>first.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +169,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="src\EDSDK\Library\EDSDK.lib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -177,6 +188,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="src\EDSDK\Dll\EDSDK.dll" />
+    <Content Include="src\EDSDK\Dll\EdsImage.dll" />
+    <Content Include="src\EDSDK\Header\EDSDK.h" />
+    <Content Include="src\EDSDK\Header\EDSDKErrors.h" />
+    <Content Include="src\EDSDK\Header\EDSDKTypes.h" />
     <Content Include="src\icon.png" />
   </ItemGroup>
   <ItemGroup />
