--- a/dyfilm_client_v2.0.csproj
+++ b/dyfilm_client_v2.0.csproj
@@ -54,6 +54,15 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge, Version=2.2.5.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.2.2.5\lib\AForge.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.Video.2.2.5\lib\AForge.Video.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Video.DirectShow, Version=2.2.5.0, Culture=neutral, PublicKeyToken=61ea4348d43881b7, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.Video.DirectShow.2.2.5\lib\AForge.Video.DirectShow.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.4, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.9.0.4\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -68,6 +77,7 @@
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
@@ -98,6 +108,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="forms\create_capframe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\create_capframe.Designer.cs">
+      <DependentUpon>create_capframe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="src\APIClient.cs" />
     <Compile Include="forms\camera_capture.cs">
       <SubType>Form</SubType>
@@ -134,9 +151,14 @@
     <Compile Include="src\Camera.cs" />
     <Compile Include="src\Config.cs" />
     <Compile Include="src\DataStruct.cs" />
+    <Compile Include="src\Temp.cs" />
     <Compile Include="src\Utils.cs" />
+    <Compile Include="src\WebCam.cs" />
     <EmbeddedResource Include="forms\camera_capture.resx">
       <DependentUpon>camera_capture.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\create_capframe.resx">
+      <DependentUpon>create_capframe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\first.resx">
       <DependentUpon>first.cs</DependentUpon>
