--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="9.0.4" targetFramework="net472" />
